@@ -1,3 +1,10 @@
+2013-02-25  Sebastien Binet  <binet@cern.ch>
+
+	* tagging PyUtils-00-13-00
+	* amilib: migrate to PyAmi-4
+	* M python/AmiLib.py
+	* M python/scripts/tc_show_clients.py
+
 2013-02-19  Sebastien Binet  <binet@cern.ch>
 
 	* tagging PyUtils-00-12-27
